--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                         <a class="relative" href="#newsletter">Newsletter</a>
                     </li>
                     <li class="header_nav_list">
-                        <a class="relative" href="#">Twitter</a>
+                        <a class="relative" href="https://twitter.com/rootaccessnews">Twitter</a>
                     </li>
                     <li class="header_nav_list">
                         <a class="relative" href="#">Advertise</a>
@@ -2394,10 +2394,10 @@ jmp       <span class="inline-block text-heroPurple">short</span>  <span class="
                         <a href="#">Newsletter</a>
                     </li>
                     <li>
-                        <a href="#">Twitter</a>
+                        <a href="https://twitter.com/rootaccessnews">Twitter</a>
                     </li>
                     <li>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/root-access-news">GitHub</a>
                     </li>
                 </ul>
             </div>
@@ -2440,11 +2440,11 @@ jmp       <span class="inline-block text-heroPurple">short</span>  <span class="
             <div class="footer_item">
                 <h3 class="mb-2 text-primary font-semibold">Contact Us</h3>
                 <a class="block mb-1" href="mailto:info@rootaccess.sh">info@rootaccess.sh</a>
-                <a class="block" href="tel:+95 454 4578">+95 454 4578</a>
+                <!-- <a class="block" href="tel:+95 454 4578">+95 454 4578</a> -->
             </div>
         </div>
         <div class="footer_copyright px-5 py-6">
-            <p class="text-center text-sm lg:text-base xl:text-lg">Copyrights 0 2022 All Rights Reserved by Cyber++</p>
+            <p class="text-center text-sm lg:text-base xl:text-lg"> RootAccess © 2023, All Rights Reserved.</p>
         </div>
     </footer>
     <script src="code/scripts.js"></script>
